default/objects/Mapping_Condition_Group__c/fields/Mapping__c.field-meta.xml
<CustomField>
    <fullName>Mapping__c</fullName>
    <label>Mapping</label>
    <referenceTo>Mapping__c</referenceTo>
    <relationshipLabel>Condition Groups</relationshipLabel>
    <relationshipName>Condition_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>