default/objects/Mapping_Condition_Group__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Logical operator for conditions within the group. Valid values are &apos;AND&apos;, &apos;OR&apos;.</description>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>