default/objects/Mapping_Condition_Group__c/fields/Parent_Condition_Group__c.field-meta.xml
<CustomField>
    <fullName>Parent_Condition_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Condition Group</label>
    <referenceTo>Mapping_Condition_Group__c</referenceTo>
    <relationshipLabel>Condition Groups</relationshipLabel>
    <relationshipName>Condition_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>